--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,5 +1,5 @@
 [defaults]
-inventory = local.ini
+inventory = local.ini,vars.ini
 interpreter_python = auto_silent
 stdout_callback = yaml
 bin_ansible_callbacks = True
