--- a/playbooks/ohpc-head.yaml
+++ b/playbooks/ohpc-head.yaml
@@ -156,6 +156,9 @@
         wwctl container syncuser rocky-9 --write # get uid/gid in before install
         wwctl overlay build
 
+        ## Configure warewulf profiles
+        # wwctl profile set -y default --netmask 255.255.0.0
+
         touch /root/head.stamp
 
       args:
