--- a/playbooks/ohpc-head.yaml
+++ b/playbooks/ohpc-head.yaml
@@ -151,13 +151,13 @@
         systemctl enable --now munge
         systemctl enable --now slurmctld
 
-        ## Node Image
+        ## Import node image
         wwctl container import docker://ghcr.io/hpcng/warewulf-rockylinux:9 rocky-9
         wwctl container syncuser rocky-9 --write # get uid/gid in before install
         wwctl overlay build
 
-        ## Configure warewulf profiles
-        # wwctl profile set -y default --netmask 255.255.0.0
+        ## Configure warewulf default profile for network
+        wwctl profile set -y default --netmask 255.255.0.0
 
         touch /root/head.stamp
 
@@ -211,7 +211,7 @@
         wwctl container syncuser rocky-9 --write
         wwctl overlay build
 
-        touch /root/node.stamp
+        touch /root/configure-node-image.stamp
 
       args:
-        creates: /root/node.stamp
+        creates: /root/configure-node-image.stamp
