Move config to local.tfvars for Ubuntu/Debian work.

--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,8 @@
 .terraform.tfstate.lock.info
 terraform.tfstate
 terraform.tfstate.backup
-local.tf
-local.ini
+local*.tfvars
+local*.ini
 /ipxe/
 /disk.img
 /disk.img-*
