--- a/playbooks/ohpc-head.yaml
+++ b/playbooks/ohpc-head.yaml
@@ -37,12 +37,12 @@
         line: "10.5.0.8    head.localdomain head"
 
     - name: Install OHPC release
-      ansible.builtin.yum:
+      ansible.builtin.dnf:
         name: http://repos.openhpc.community/OpenHPC/3/EL_9/{{ arch }}/ohpc-release-3-1.el9.{{ arch }}.rpm
         disable_gpg_check: true
 
     - name: Install OHPC base
-      ansible.builtin.yum:
+      ansible.builtin.dnf:
         enablerepo: powertools
         name:
           - ohpc-base
@@ -54,13 +54,13 @@
           - mtools
 
     - name: Install Warewulf (RPM)
-      ansible.builtin.yum:
+      ansible.builtin.dnf:
         name:
           - warewulf-ohpc
       when: not warewulf_build
 
     - name: Install Warewulf build dependencies
-      ansible.builtin.yum:
+      ansible.builtin.dnf:
         name:
           - dhcp-server
           - tftp-server
