--- a/playbooks/nodes.yaml
+++ b/playbooks/nodes.yaml
@@ -27,6 +27,7 @@
           wwctl node set --yes --kernelargs="crashkernel=no vga=791 net.naming-scheme=v238" 'c[0-4]'
 
           wwctl configure --all
+          systemctl restart isc-dhcp-server ## needs to be put in warewulf.conf
           wwctl overlay build
 
           touch /root/add-nodes.stamp
