--- a/playbooks/system-rocky.yaml
+++ b/playbooks/system-rocky.yaml
@@ -1,3 +1,7 @@
+- hosts: all
+  collections:
+    - community.general
+
 - name: Configure System
   hosts: head
   become: true
@@ -15,9 +19,9 @@
           - python3-pip
 
     - name: Enable CRB repository
-      ansible.builtin.dnf:
-        config_manager: enabled
+      community.general.dnf_config_manager:
         name: crb
+        state: enabled
 
     - name: Check if reboot is required
       ansible.builtin.command: /usr/bin/needs-restarting -r
