--- a/playbooks/nodes.yaml
+++ b/playbooks/nodes.yaml
@@ -13,7 +13,7 @@
             IP=10.5.1.$I
             NODE=c$I
             MAC=""
-            ping -q -c 1 -W 0.2 $IP
+            ping -q -c 1 -W 0.2 $IP > /dev/null || /bin/true
             MAC=$(ip -json neigh | jq -r ".[] | select(.dst == \"${IP}\").lladdr")
             wwctl node delete -y $NODE
             if [[ "${MAC}" != "null" ]] ; then
