--- a/playbooks/container-rocky.yaml
+++ b/playbooks/container-rocky.yaml
@@ -21,7 +21,7 @@
         # https://github.com/warewulf/warewulf-node-images/blob/main/rockylinux-9/Containerfile
 
         wwctl container import docker://docker.io/rockylinux/rockylinux:9 rocky-9
-        wwctl container exec --syncuser rocky-9 /bin/bash <<-EOF
+        wwctl container exec --syncuser rocky-9 /bin/bash <<EOF
           set -e
 
           ## Mirror
@@ -60,7 +60,7 @@
 
           install -v -dp /etc/warewulf
           ## note the tabs in the file.
-          tee /etc/warewulf/excludes <<-EXCLUDES
+          tee /etc/warewulf/excludes <<EXCLUDES
         /boot/
         /usr/share/GeoIP
         EXCLUDES
@@ -68,7 +68,7 @@
 
         ## Build container
         wwctl container syncuser rocky-9 --write # get uid/gid in before install
-        wwctl container exec --syncuser rocky-9 /bin/bash <<-EOF
+        wwctl container exec --syncuser rocky-9 /bin/bash <<EOF
           set -e
 
           ## Mirror
@@ -109,7 +109,8 @@
 
         ## Set profile
         wwctl profile set --yes default --container rocky-9
-        wwctl profile set --yes default --kernelargs="console=tty0 console=ttyS0,115200 root=tmpfs selinux=0 crashkernel=no systemd.log_color=0"
+        wwctl profile set --yes default --kernelargs="console=tty0 console=ttyS0,115200 root=tmpfs selinux=0 crashkernel=no systemd.log_color=0 vga=791"
+        wwctl profile set --yes default --netname default --netdev eth0
 
       args:
         creates: /var/lib/warewulf/provision/container/rocky-9.img.gz
