--- a/playbooks/container-ubuntu.yaml
+++ b/playbooks/container-ubuntu.yaml
@@ -2,9 +2,11 @@
   hosts: head
   become: true
   tasks:
-    - name: Generate compute node image -- UNTESTED AFTER REFACTORING
+    - name: Generate compute node image
       ansible.builtin.shell: |
         set -e
+
+        ## Config
         sms_ip=10.5.0.8
 
         ## Import node image
@@ -12,7 +14,9 @@
         wwctl container syncuser ubuntu-24.04 --write # set head uid/gid in container before install
 
         ## Build and configure node
-        wwctl container exec --syncuser ubuntu-24.04 /bin/bash <<-EOF
+        wwctl container exec --syncuser ubuntu-24.04 /bin/bash <<EOF
+          set -e
+
           ## Debug
           passwd -d root # allow serial console login
 
@@ -24,53 +28,43 @@
 
           ## Install kernel
           apt-get install --yes --no-install-recommends linux-image-generic linux-tools-generic
-          rm -v /initrd.img* /vmlinuz*
+          rm -vf /initrd.img* /vmlinuz*
 
           ## Install base packages
           apt-get install --yes --no-install-recommends curl jq zstd cpio procps iproute2 busybox-static
           apt-get install --yes --no-install-recommends init udev dbus polkitd
-          apt-get install --yes --no-install-recommends systemd-timesyncd systemd-resolved
+          apt-get install --yes --no-install-recommends systemd-timesyncd systemd-resolved ifupdown
           apt-get install --yes --no-install-recommends openssh-server python3
           apt-get install --yes less vim
 
           ## Network
-          systemctl enable systemd-networkd
-          cat > /etc/systemd/network/en.network <<-CONF
-            [Match]
-            Name=en*
+          #systemctl enable systemd-networkd
 
-            [Network]
-            DHCP=yes
-            LinkLocalAddressing=ipv6
-          CONF
-
-          wwctl overlay mkdir wwinit /etc/systemd/network
-          wwctl overlay import wwinit en.network /etc/systemd/network/en.network
-
-          mount -t devpts devpts /dev/pts ## workarround
+          ## Munge
+          mount -t devpts devpts /dev/pts ## FIXME: workarround
           install -dv --mode=700 --owner=munge --group=munge /etc/munge
           touch /etc/munge/munge.key ## blank file will be replace with the overlay (bypass container install error)
           apt-get install --yes munge
           systemctl enable munge
           umount /dev/pts ## workarround
 
+          ## Slurm
           apt-get install --yes slurmd
           echo SLURMD_OPTIONS="--conf-server ${sms_ip}" > /etc/default/slurmd
           systemctl enable slurmd
 
+          ## Lmod
           apt-get install --yes lmod
 
-          ## Cleanup
+          ## Cleanup and exit
           apt-get clean
-
           echo "exit container"
         EOF
 
-        ## fix init hack
-        #perl -pi -e 's/#!\/bin\/sh/\/bin\/bash/' /var/lib/warewulf/overlays/wwinit/rootfs/init
-
+        ## Set profile
         wwctl profile set --yes default --container ubuntu-24.04
-        wwctl profile set --yes default --kernelargs="crashkernel=no vga=791 net.naming-scheme=v238"
+        wwctl profile set --yes default --kernelargs="console=tty0 console=ttyS0,115200 root=tmpfs selinux=0 crashkernel=no systemd.log_color=0 vga=791"
+        wwctl profile set --yes default --netname default --netdev en0
 
       args:
-        creates: /var/lib/warewulf/provision/container/ubuntu-24-04.img.gz
+        creates: /var/lib/warewulf/provision/container/ubuntu-24.04.img.gz
