--- a/playbooks/container-rocky.yaml
+++ b/playbooks/container-rocky.yaml
@@ -53,6 +53,7 @@
                 wget \
                 which \
                 words \
+              && dnf remove -y selinux-policy \
               && dnf clean all
 
           # FIXME: Bugfix: upgrade of 'filesystem' sets '/' to -w
@@ -109,7 +110,7 @@
 
         ## Set profile
         wwctl profile set --yes default --container rocky-9
-        wwctl profile set --yes default --kernelargs="console=tty0 console=ttyS0,115200 root=tmpfs selinux=0 crashkernel=no systemd.log_color=0 vga=791"
+        wwctl profile set --yes default --kernelargs="console=tty0 console=ttyS0,115200 crashkernel=no systemd.log_color=0 vga=791"
         wwctl profile set --yes default --netname default --netdev eth0
 
       args:
